monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4063/A4063.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4063;

grammar A4063 {

  A = key("--") ;

}
